# okapi

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/custom_schema/: Cargo.toml
examples/custom_schema/src/: main.rs
examples/dyn_templates/: Cargo.toml
examples/dyn_templates/src/: main.rs
examples/json-web-api/: Cargo.toml
examples/json-web-api/src/: main.rs
examples/nested/: Cargo.toml
examples/nested/src/: error.rs  main.rs
examples/openapi_attributes/: Cargo.toml
examples/openapi_attributes/src/: main.rs
examples/raw_identifiers/: Cargo.toml
examples/raw_identifiers/src/: main.rs
examples/secure_request_guard/: Cargo.toml
examples/secure_request_guard/src/: main.rs
examples/special-types/: Cargo.toml
examples/special-types/src/: main.rs
examples/streams/: Cargo.toml
examples/streams/src/: main.rs
examples/uuid_usage/: Cargo.toml
examples/uuid_usage/src/: main.rs
examples/websocket_usage/: Cargo.toml
examples/websocket_usage/src/: main.rs
okapi/: CHANGELOG.md  Cargo.toml
okapi/src/: lib.rs  merge.rs  openapi3.rs
okapi/tests/: merge.rs
rocket-okapi/: CHANGELOG.md  Cargo.toml
rocket-okapi-codegen/: Cargo.toml
rocket-okapi-codegen/src/: lib.rs  openapi_spec.rs  parse_routes.rs
rocket-okapi-codegen/src/openapi_attr/: doc_attr.rs  mod.rs  route_attr.rs
rocket-okapi-codegen/tests/: parse_routes.rs
rocket-okapi/rapidoc/: rapidoc-min.js
rocket-okapi/src/: gen.rs  lib.rs  rapidoc.rs  settings.rs  util.rs
rocket-okapi/src/handlers/: content.rs  openapi.rs  redirect.rs
rocket-okapi/src/request/: from_form_multi_param_impls.rs
rocket-okapi/src/response/: responder_impls.rs
rocket-okapi/tests/: attributes.rs  gen.rs  handlers.rs  request.rs  responses.rs
