[workspace]
members = [
    "okapi",
    "rocket-okapi",
    "rocket-okapi-codegen",
    "examples/json-web-api",
    "examples/custom_schema",
    "examples/nested",
    "examples/uuid_usage",
    "examples/special-types",
    "examples/secure_request_guard",
    "examples/streams",
    "examples/dyn_templates",
    "examples/openapi_attributes",
    "examples/raw_identifiers",
    "examples/websocket_usage",
]
resolver = "2"

[workspace.dependencies]
log = "0.4"
# Use the development Rocket from the rwf2 fork branch `master` for the workspace
rocket = { git = "https://github.com/rwf2/Rocket.git", branch = "master", default-features = false, features = [
    "json",
    "http2",
    "http3-preview",
] }
rocket_ws = { git = "https://github.com/rwf2/Rocket.git", branch = "master" }
rocket_http = { git = "https://github.com/rwf2/Rocket.git", branch = "master" }
rocket_dyn_templates = { git = "https://github.com/rwf2/Rocket.git", branch = "master" }
rocket_db_pools = { git = "https://github.com/rwf2/Rocket.git", branch = "master" }
rocket_sync_db_pools = { git = "https://github.com/rwf2/Rocket.git", branch = "master" }
schemars = "1.1.0"
serde = "1.0"
serde_json = "1.0"

[patch.crates-io]
rocket = { git = "https://github.com/rwf2/Rocket.git", branch = "master" }
rocket_http = { git = "https://github.com/rwf2/Rocket.git", branch = "master" }
rocket_ws = { git = "https://github.com/rwf2/Rocket.git", branch = "master" }
rocket_dyn_templates = { git = "https://github.com/rwf2/Rocket.git", branch = "master" }
rocket_db_pools = { git = "https://github.com/rwf2/Rocket.git", branch = "master" }
rocket_sync_db_pools = { git = "https://github.com/rwf2/Rocket.git", branch = "master" }
