[package]
name = "custom_schema"
version = "0.1.0"
authors = ["Ralph Bisschops <ralph.bisschops.dev@gmail.com>"]
edition = "2021"

[dependencies]
rocket = { workspace = true }
rocket_okapi = { path = "../../rocket-okapi", features = [
    "swagger",
    "rapidoc",
] }
serde = { workspace = true, features = ["derive"] }
schemars = "1.1.0"

serde_json = "1.0"
