[package]
name = "dyn_templates"
version = "0.1.0"
authors = ["Ralph Bisschops <ralph.bisschops.dev@gmail.com>"]
edition = "2021"

[dependencies]
rocket = { workspace = true }
rocket_okapi = { path = "../../rocket-okapi", features = [
    "swagger",
    "rapidoc",
    "rocket_dyn_templates",
] }
serde = { workspace = true, features = ["derive"] }
rocket_dyn_templates = { workspace = true, features = ["handlebars"] }
handlebars = "5.0.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
serde_json = "1.0"
