[package]
name = "nested"
version = "0.1.0"
authors = [
    "Maxime Borges <contact@maximeborg.es>",
    "Ralph Bisschops <ralph.bissops.dev@gmail.com>",
]
edition = "2021"

[dependencies]
rocket = { workspace = true }
rocket_okapi = { path = "../../rocket-okapi", features = ["rapidoc"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
schemars = "1.1.0"

[dev-dependencies]
serde_json = "1.0"
