[package]
name = "openapi_attributes"
version = "0.1.0"
authors = ["Ralph Bisschops <ralph.bisschops.dev@gmail.com>"]
edition = "2021"

[dependencies]
rocket = { workspace = true }
rocket_okapi = { path = "../../rocket-okapi", features = [
    "swagger",
    "rapidoc",
] }
serde = { workspace = true }
schemars = "1.1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
serde_json = "1.0"
