[package]
name = "raw_identifiers"
version = "0.1.0"
authors = ["Alex Payne <apayne@esri.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
schemars = "1.1.0"
rocket = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rocket_okapi = { path = "../../rocket-okapi", features = [
    "rapidoc",
    "swagger",
] }

[dev-dependencies]
serde_json = "1.0"
